--- a/config/vhosts/default.conf
+++ b/config/vhosts/default.conf
@@ -1,8 +1,9 @@
 <VirtualHost *:80>
     ServerAdmin webmaster@localhost
     DocumentRoot "/var/www/html"
-    ServerName localhost
-	<Directory "/var/www/html/">
+    ServerName webim.test
+	<Directory "/var/www/html">
 		AllowOverride all
+		Options +Indexes
 	</Directory>
 </VirtualHost>
