--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,15 +10,15 @@ services:
       - "80:80"
       - "443:443"
     links: 
-      - mysql
+      - mariadb
     volumes: 
       - ${DOCUMENT_ROOT-./www}:/var/www/html
       - ${PHP_INI-./config/php/php.ini}:/usr/local/etc/php/php.ini
       - ${VHOSTS_DIR-./config/vhosts}:/etc/apache2/sites-enabled
       - ${LOG_DIR-./logs/apache2}:/var/log/apache2
-  mysql:
+  mariadb:
     build: ./bin/mysql
-    container_name: '5.7-mysql'
+    container_name: '5.7-mariadb'
     restart: 'always'
     ports:
       - "3306:3306"
@@ -31,12 +31,12 @@ services:
     image: phpmyadmin/phpmyadmin
     container_name: 'sc-phpmyadmin'
     links:
-      - mysql
+      - mariadb
     environment:
-      PMA_HOST: mysql
+      PMA_HOST: mariadb
       PMA_PORT: 3306
     ports:
-      - '8080:80'
+      - '8100:80'
     volumes: 
       - /sessions
   redis:
